data/derived/fa15/progs/unify/prog2814.ml.out
Characters 77-78:
  let fixpoint (f,b) = wwhile ( (let n z = let xx = f in (xx, b = f(b))  in n),b);;
                                                                               ^
Error: This expression has type 'a but an expression was expected of type
         'a -> 'a
       The type variable 'a occurs inside 'a -> 'a
